--- a/packages/global/styles/04-elements/_elements-code.scss
+++ b/packages/global/styles/04-elements/_elements-code.scss
@@ -3,7 +3,7 @@
 \* ------------------------------------ */
 
 pre {
-  @include bolt-padding(medium);
+  @include bolt-padding(small);
   @include bolt-horizontal-scroll;
   text-align: left;
   white-space: pre-wrap;
