--- a/apps/bolt-site--storefront/templates/default.twig
+++ b/apps/bolt-site--storefront/templates/default.twig
@@ -1,5 +1,11 @@
 {% set content %}
-  <h2>{{ page.meta.title }}</h2>
+
+  {% include "@bolt-components-headline/headline.twig" with {
+    text: page.meta.title,
+    size: "xxxlarge",
+    tag: "h2"
+  } %}
+
   <article>
     {{ page.body|raw }}
   </article>
