--- a/packages/components/bolt-band/src/band.twig
+++ b/packages/components/bolt-band/src/band.twig
@@ -1,7 +1,7 @@
 {% set prefix = "c-bolt-" %}
 {% set tags = ["div", "article", "section", "header", "footer", "nav", "figure"] %} {# Available overall container tags #}
 {% set contentTags = ["div", "article", "section", "header", "footer", "nav", "figcaption"] %} {# Available content container tags #}
-{% set fullBleed = [true, false] %}
+{% set fullBleedOptions = [true, false] %}
 {% set sizes = [
   "xsmall",
   "small",
@@ -23,13 +23,16 @@
 {% set baseClass = prefix ~ componentName %}
 {% set tag = tag in tags ? tag: "div" %}
 {% set contentTag = contentTag in contentTags ? contentTag: "div" %}
-{% set fullBleed = fullBleed | default(false) %}
+{% set fullBleed = fullBleed == false and fullBleed is not null ? false : true %}
+
+{# set fullBleed = fullBleed in fullBleedOptions ? fullBleed | default(false) #}
 {% if size != "none" %}
   {% set size = size | default("medium") %}
 {% endif %}
 {% if theme != "none" %}
   {% set theme = theme | default("dark") %}
 {% endif %}
+
 
 {% set classes = [
   baseClass,
