WIP: adding off-canvas nav for smaller screens; refactoring + cleanup

--- a/apps/bolt-site--storefront/templates/home.twig
+++ b/apps/bolt-site--storefront/templates/home.twig
@@ -16,7 +16,7 @@
 
       {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
         {% include "@bolt/eyebrow.twig" with {
-          text: bolt.version
+          text: "v1.0.0-beta.1"
         } only %}
 
         {% include "@bolt/headline.twig" with {
