--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -142,10 +142,13 @@
 </script>
 
 <script src="/build/bolt-global.js" async></script>
+
 {# Code syntax highlighting - https://highlightjs.org/ #}
-
-
-
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">	+
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js" async></script>	+
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/scss.min.js" async></script>	+
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/twig.min.js" async></script>
+<script>hljs.initHighlightingOnLoad();</script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 {#<script>#}
