2nd Round of PL Docs Polish (#452)
* WIP: 1st round of overall look and feel improvements to the PL demos and schema display; updates schema props from list to table + beginning work on nested table handling

* chore: merging in latest from epic refactor

* WIP: testing out table layout of schema props at the top level + recursive nested list for deeply nested data

* fix: fixing button schema; cleaning up docs styling

* fix: re-merging latest from epic/refactor

* refactor: additional polish on docs demo, updating default content width to better fit new table work

* Pl Docs Polish - edit readme JS and SASS

* Pl Docs Polish - removed 'Theme Inheritance' sections from readme

* Pl Docs Polish - schema table -- removed '-' and newline at the start of every description

* Pl Docs Polish - schema table -- removed '-' at the start of title in the description

* Pl Docs Polish - schema table -- added fix for boolean type and null enum value && added some logic when only two items to use 'OR' instead of ','

* Pl Docs Polish - schema table -- removed required column and added red asterisk

* Pl Docs Polish - schema table -- removed default and unused required item from description area

* Pl Docs Polish - schema table -- solved odd layout issue with table row border

* Pl Docs Polish - schema table -- tightened up array items display

* Pl Docs Polish - schema table -- quick tweak

* Pl Docs Polish - schema table -- WIP for prop.ref items display

* Pl Docs Polish - schema table -- Added wrapper back to readme block to enable hover behavior

* Adding conditional for schema props back in

--- a/apps/pattern-lab--workshop/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/docs.twig
@@ -36,7 +36,9 @@
             id: "getting-started"
           }
         } %}
-      {{ source(readmeFile) | markdown }}
+      <div class="c-bolt-docs__lead">
+        {{ source(readmeFile) | markdown }}
+      </div>
     {% endif %}
 
     {% if code %}
