--- a/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
@@ -1,42 +1,40 @@
 {% macro titleAndDescription(title, description, minimum, maximum) %}
-  {%- if title %} - <strong>{{ title | markdown }}</strong> {% endif -%}
+  {%- if title %}<strong>{{ title | markdown }}</strong> {% endif -%}
   {% if minimum and maximum %}
     - [{{ minimum }} ~ {{ maximum }}]
   {% else %}
     {%- if minimum %} - Minimum is {{ minimum }} {%- endif %}
     {%- if maximum %} - Maximum is {{ maximum }} {%- endif %}
   {% endif %}
-  {%- if description %} - {{ description | markdown }} {% endif -%}
+  {%- if description %}{{ description | markdown }}{% endif -%}
 {% endmacro %}
 
 
 {% macro schemaProps(prop) %}
   {% import _self as macros %}
-
-  <ul>
-    {% set enum %}
-      {% for x in prop.enum %}
-        <code>{{ x }}</code>{% if not loop.last %},{% endif %}
-      {% endfor %}
-    {% endset %}
+  {% set enum %}
+    {% for x in prop.enum %}
+      <code>{% if prop.type == 'boolean' %}{{ x ? 'TRUE' : 'FALSE' }}{% elseif x == null %}NULL{% else %}{{ x }}{% endif %}</code>
+      {%- if not loop.last %}{{ prop.enum|length == 2 ? ' OR' : ',' }}{% endif -%}
+    {% endfor %}
+  {% endset %}
+  <ul class="c-bolt-docs-list">
     <li>
-      Type: <code>{{ prop.type }}</code>
       {% if prop.oneOf %}
         Must be one of:
-        <ul>
+        <ul class="c-bolt-docs-list__child">
           {% for item in prop.oneOf %}
             <li><code>{{ item.enum|join(',') }}</code>{{ macros.titleAndDescription(item.title, item.description, prop.minimum, prop.maximum) }}</li>
           {% endfor %}
         </ul>
-      {%- elseif prop.enum %} - Must be one of: {{ enum }}
-      {% endif %}
+      {%- elseif prop.enum %}{{ enum }}{% endif -%}
 
       {% if prop.type == 'object' and prop.properties or prop.ref %}
         {% if prop.ref %}
           {% set reference = get_data(prop.ref).properties %}
           <details>
             <summary><em>{{ prop.ref }} > Object details</em></summary>
-            {{ macros.object(reference) }}
+            {{ macros.object(reference, true) }}
           </details>
         {% else %}
           {{ macros.object(prop.properties) }}
@@ -44,48 +42,44 @@
       {% endif %}
 
       {% if prop.type == 'array' and prop.items %}
-        <ul>
-          <li>Items:</li>
-          {% if prop.items.type == 'object' %}
-            <ul>
-              <li>Type: <code>{{ prop.items.type }}</code>{{ macros.titleAndDescription(prop.items.title, prop.items.description, prop.minimum, prop.maximum) }}</li>
-              <li>Properties:
-                <ul>
-                  {% for key, property in prop.items.properties %}
-                    <li><code>{{ key }}</code>
-                      {{ macros.titleAndDescription(property.title, property.description, prop.minimum, prop.maximum) }}
-                      {% if property.type %}
-                        <ul>
-                          <li>Type: <code>{{ property.type }}</code></li>
-                          {% if property.type == 'object' and property.properties %}
-                            <li>Properties:</li>
-                            {{ macros.object(property.properties) }}
-                          {% endif %}
-                        </ul>
-                      {% endif %}
-                    </li>
-                  {% endfor %}
-                </ul>
-              </li>
-            </ul>
-          {% endif %}
-        </ul>
+        {% if prop.items.type == 'object' %}
+          [<em>items</em>]:
+          <ul class="c-bolt-docs-list__child">
+            <li>Type: <code>{{ prop.items.type }}</code>{{ macros.titleAndDescription(prop.items.title, prop.items.description, prop.minimum, prop.maximum) }}</li>
+            <li>Properties:
+              <ul class="c-bolt-docs-list__child c-bolt-docs-list__child--level-2">
+                {% for key, property in prop.items.properties %}
+                  <li><code>{{ key }}</code>
+                    {{ macros.titleAndDescription(property.title, property.description, prop.minimum, prop.maximum) }}
+                    {% if property.type %}
+                      <ul class="c-bolt-docs-list__child c-bolt-docs-list__child--level-3">
+                        <li>Type: <code>{{ property.type }}</code></li>
+                        {% if property.type == 'object' and property.properties %}
+                          <li>Properties:</li>
+                          {{ macros.object(property.properties) }}
+                        {% endif %}
+                      </ul>
+                    {% endif %}
+                  </li>
+                {% endfor %}
+              </ul>
+            </li>
+          </ul>
+        {% endif %}
       {% endif %}
     </li>
-    {% if key in loop.parent.required %} <li><strong>Required</strong></li> {% endif %}
-    {% if prop.default %} <li>Default: <code>{{ prop.default }}</code></li> {% endif %}
   </ul>
 {% endmacro %}
 
-
-{% macro object(properties) %}
+{% macro object(properties, isRef) %}
   {% import _self as macros %}
+  {% set isRef = isRef|default(false) %}
   <ul>
     {% for key, prop in properties %}
       <li>
         <code>{{ key }}</code>
         {{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}
-
+        {% if isRef %}<br />Type: {{ prop.type }}{% endif %}
         {{ macros.schemaProps(prop) }}
       </li>
     {% endfor %}
@@ -110,6 +104,7 @@
   } only %}
 {% endif %}
 
+{% set requiredProps = schema.required %}
 
 {% if schema.properties %}
   <div class="c-bolt-docs-table">
@@ -117,34 +112,30 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Value</th>
+          <th>Type</th>
+          <th>Value(s)</th>
           <th>Description</th>
           <th>Default</th>
-          <th>Required?</th>
         </tr>
       </thead>
 
       <tbody>
         {% for key, prop in schema.properties %}
           <tr class="c-bolt-docs-table__row">
-            <td>{{ key }}</td>
+            <td class="c-bolt-docs-table__col c-bolt-docs-table__col--key">{{ key }}{% if key in requiredProps %} <span class="required-key" title="Required">*</span>{% endif %}</td>
 
-            <td>{{ macros.schemaProps(prop) }}</td>
+            <td class="c-bolt-docs-table__col"><code>{{ prop.type }}</code></td>
 
-            <td>{{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}</td>
+            <td class="c-bolt-docs-table__col">{{ macros.schemaProps(prop) }}</td>
 
-            <td>
+            <td class="c-bolt-docs-table__col">{{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}</td>
+
+            <td class="c-bolt-docs-table__col">
               {% if prop.default %}
                 <code>{{ prop.default }}</code>
               {% else %}
                 -
               {% endif %}
-            </td>
-
-            <td>
-            {% if key in requiredProps %}
-              Required
-            {% endif %}
             </td>
           </tr>
         {% endfor %}
