add hashtags to match PL styling

--- a/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
+++ b/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
@@ -1,11 +1,7 @@
 .sub-nav {
   list-style-type: none;
   margin: 0;
-  padding: 15px 0px 0;
-
-  .c-bolt-headline {
-    margin-top: 1.65rem;
-  }
+  padding: 3.3rem 0 0;
 
   &__link {
     font-size: 1.11rem;
