feat: add support for blue icons (WWWD-1010)

--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -115,3 +115,10 @@ bolt-icon[size='xlarge'],
   --bolt-theme-icon-background-color: $brand-color;
   --bolt-theme-icon-background-opacity: 1;
 }
+
+.c-bolt-icon--blue {
+  $brand-color: bolt-color(blue);
+  --bolt-color-icon: $brand-color;
+  --bolt-theme-icon-background-color: bolt-text-contrast($brand-color);
+  --bolt-theme-icon-background-opacity: 1;
+}
