--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -118,6 +118,7 @@ bolt-icon[size='xlarge'],
 
 .c-bolt-icon--blue {
   $brand-color: bolt-color(blue);
+  color: $brand-color;
   --bolt-color-icon: $brand-color;
   --bolt-theme-icon-background-color: bolt-text-contrast($brand-color);
   --bolt-theme-icon-background-opacity: 1;
