Add Social icons (#463)
* feat: Add share SVGs (WWWD-1010)

* feat: Compile javascript for new share icons (WWWD-1010)

* feat: add support for blue icons (WWWD-1010)

* fix: set fallback IE 11 blue icon color

--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -115,3 +115,11 @@ bolt-icon[size='xlarge'],
   --bolt-theme-icon-background-color: $brand-color;
   --bolt-theme-icon-background-opacity: 1;
 }
+
+.c-bolt-icon--blue {
+  $brand-color: bolt-color(blue);
+  color: $brand-color;
+  --bolt-color-icon: $brand-color;
+  --bolt-theme-icon-background-color: bolt-text-contrast($brand-color);
+  --bolt-theme-icon-background-opacity: 1;
+}
