Docs - Layout and sidebar theme tweaks

--- a/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
+++ b/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
@@ -1,7 +1,8 @@
 .sub-nav {
+  border-top: 1px solid #E0E2EB;
   list-style-type: none;
   margin: 0;
-  padding: 3.3rem 0 0;
+  padding: 20px 20px 0;
 
   &__link {
     font-size: 1.11rem;
@@ -14,6 +15,10 @@
     &--active {
       font-weight: bolder;
       text-decoration: none;
+    }
+    .sub-nav__list--depth-1 & {
+      font-size: 1.25rem;
+      font-weight: 600;
     }
     .sub-nav__list--depth-2 & {
       font-size: 0.9rem;
