Docs - sidebar theme tweaks

--- a/apps/bolt-site--storefront/templates/partials/sub-nav.twig
+++ b/apps/bolt-site--storefront/templates/partials/sub-nav.twig
@@ -27,6 +27,9 @@
       text: currentSection|title,
       size: 'xlarge',
       tag: 'h2',
+      icon: {
+        name: 'chevron-right'
+      }
     } %}
   {% endif %}
   {{ macros.menu(nestedPages, 1, currentUrl) }}
