feat: implement inline Twig function; update Webpack to support font assets; removes original @bolt/assets package - moves font assets to @bolt/global; remove @font-face Bolt mixin from Sass to work around limitations of Webpack resolve-url-loader

--- a/apps/pattern-lab--workshop/src/_meta/_00-head.twig
+++ b/apps/pattern-lab--workshop/src/_meta/_00-head.twig
@@ -12,12 +12,12 @@
 
     {# @TODO: wire this up to use Critical CSS #}
     <style>
-    {#{{ inline("scripts/critical-fonts.css", "/dist/") }}#}
+      {{ inline("bolt-components-critical-fonts.css") }}
     </style>
 
     {# @TODO: wire this up to use Critical JS #}
     <script>
-    {#{{ inline("scripts/bolt-critical-path.min.js", "/dist/") }}#}
+      {{ inline("bolt-components-critical-fonts.js") }}
     </script>
 
 
