--- a/packages/components/bolt-critical-fonts/src/critical-fonts.scss
+++ b/packages/components/bolt-critical-fonts/src/critical-fonts.scss
@@ -1,8 +1,8 @@
 $bolt-export-data: false !global;
 
-@import '@bolt/settings-all';
-@import '@bolt/tools-all';
-@import '@bolt/generic-all';
-@import '@bolt/elements-headings';
-@import '@bolt/elements-page';
+@import '@bolt/core';
+@import '@bolt/global/styles/03-generic/_generic-font-stacks';
+@import '@bolt/global/styles/04-elements/_elements-headings';
+@import '@bolt/global/styles/04-elements/_elements-page';
+@import '@bolt/global/styles/04-elements/_elements-page';
 @import '@bolt/components-headline';
